fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@ html {
 
 .App {
   background-color: #111;
+  overflow: hidden;
 }
+
 body {
   font-family: "Hind", sans-serif;
 }
@@ -38,7 +40,7 @@ body {
 
 .loader_container {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   z-index: 200;
