--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -4,4 +4,5 @@
   color: white;
   font-size: 1.6rem;
   padding-bottom: 2rem;
+  width: 100%;
 }
